# ycsb-rs

./: Cargo.toml
benches/: ycsb_bench.rs
src/: db.rs  generator.rs  lib.rs  result.rs  workload.rs
workloads/: workload_a.json  workload_b.json  workload_c.json  workload_d.json
