[package]
name = "ycsb-rs"
version = "0.1.0"
authors = ["Jin Xue <csjinxue@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
zipf = "6"
fasthash = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.14"
